--- a/PREDICTIVE_MODELLING_FOR_AGRICULTURE.ipynb
+++ b/PREDICTIVE_MODELLING_FOR_AGRICULTURE.ipynb
@@ -5,7 +5,7 @@
    "id": "e621eaae",
    "metadata": {},
    "source": [
-    "## **Predictive Modeling for Crop Recommendation Using Soil Nutrients**\n",
+    "## **Predictive Modeling for Crop Recommendation Using Soil Fertility Parameters**\n",
     "                "
    ]
   },
@@ -14,7 +14,7 @@
    "id": "0459c0f1",
    "metadata": {},
    "source": [
-    "# PROJECT DESCRIPTION\n",
+    "# **PROJECT DESCRIPTION**\n",
     "\n",
     "A farmer reached out to you as a machine learning expert seeking help to select the best crop for his field. Due to budget constraints, the farmer explained that he could only afford to measure one out of the four essential soil measures:\n",
     "\n",
@@ -31,54 +31,12 @@
    "id": "ac530b50",
    "metadata": {},
    "source": [
-    "# FEATURES\tDescription\n",
+    "# **FEATURES Description**\n",
     "1. \"N\"\tNitrogen content ratio in the soil\n",
     "2. \"P\"\tPhosphorous content ratio in the soil\n",
     "3. \"K\"\tPotassium content ratio in the soil\n",
     "4. \"pH\"\tPH value of the soil\n",
     "5. \"crop\"\tcategorical values that contain various crops (target variable)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "8cc2688e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kaggle in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (1.7.4.5)\n",
-      "Requirement already satisfied: bleach in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (6.3.0)\n",
-      "Requirement already satisfied: certifi>=14.05.14 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (2025.10.5)\n",
-      "Requirement already satisfied: charset-normalizer in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (3.4.4)\n",
-      "Requirement already satisfied: idna in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (3.11)\n",
-      "Requirement already satisfied: protobuf in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (6.33.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.3 in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from kaggle) (2.9.0.post0)\n",
-      "Requirement already satisfied: python-slugify in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (8.0.4)\n",
-      "Requirement already satisfied: requests in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (2.32.5)\n",
-      "Requirement already satisfied: setuptools>=21.0.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (80.9.0)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from kaggle) (1.17.0)\n",
-      "Requirement already satisfied: text-unidecode in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (1.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (4.67.1)\n",
-      "Requirement already satisfied: urllib3>=1.15.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (2.5.0)\n",
-      "Requirement already satisfied: webencodings in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kaggle) (0.5.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from tqdm->kaggle) (0.4.6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install kaggle"
    ]
   },
   {
@@ -89,43 +47,6 @@
    "outputs": [],
    "source": [
     "from kaggle.api.kaggle_api_extended import KaggleApi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "d792bed4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kagglehub in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.3.13)\n",
-      "Requirement already satisfied: packaging in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from kagglehub) (25.0)\n",
-      "Requirement already satisfied: pyyaml in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kagglehub) (6.0.3)\n",
-      "Requirement already satisfied: requests in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kagglehub) (2.32.5)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kagglehub) (4.67.1)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests->kagglehub) (3.4.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests->kagglehub) (3.11)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests->kagglehub) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests->kagglehub) (2025.10.5)\n",
-      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from tqdm->kagglehub) (0.4.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install kagglehub"
    ]
   },
   {
@@ -159,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fca45169",
    "metadata": {},
    "outputs": [
@@ -7126,7 +7047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
